# shoebox

./: .gitignore  DESIGN.md  Procfile  README.md  shed.cabal  shoebox.cabal  stack.yaml
app/: Main.hs
migrations/: 0.sql  2.sql  3.sql  sqlite.sql
migrations/postgresql/: 0.sql  1.sql  2.sql  3.sql
src/Database/Shed/: BlobServer.hs  Files.hs  Images.c  Images.hs  Indexer.hs  Signing.hs  Types.hs
src/Database/Shed/BlobServer/: Directory.hs  Memory.hs
src/Shed/: BlobServer.hs  Files.hs  Images.c  Images.hs  Importer.hs  Importers.hs  IndexServer.hs  Indexer.hs  Signing.hs  Types.hs  Util.hs
src/Shed/Blob/: Email.hs  File.hs  Permanode.hs
src/Shed/BlobServer/: Directory.hs  Memory.hs
src/Shed/IndexServer/: Postgresql.hs  Sqlite.hs
src/Shoebox/: BlobServer.hs  Deletion.hs  Images.c  Images.hs  Importer.hs  IndexServer.hs  Indexer.hs  Items.hs  Signing.hs  Types.hs  Util.hs
src/Shoebox/Blob/: Box.hs  Delete.hs  Email.hs  File.hs  Note.hs  Replace.hs  Url.hs
src/Shoebox/BlobServer/: CachingMemory.hs  CachingRedis.hs  Directory.hs  Memory.hs  S3.hs
src/Shoebox/IndexServer/: Postgresql.hs  Sqlite.hs
static/: app.js  main.css
sync/: Main.hs
templates/: 404.tpl  _base.tpl  _items.tpl  blob.tpl  box.tpl  email.tpl  file.tpl  index.tpl  landing.tpl
