name:                shed
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dbp/shed#readme
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Shed.Types
                     , Shed.BlobServer
                     , Shed.BlobServer.Directory
                     , Shed.BlobServer.Memory
                     , Shed.Indexer
                     , Shed.Images
                     , Shed.Signing
                     , Shed.Files
                     , Shed.Importers
                     , Shed.IndexServer
                     , Shed.IndexServer.Postgresql
                     , Shed.IndexServer.Sqlite
  c-sources:           src/Shed/Images.c

  cc-options:          -Wall -O2
  extra-libraries:     exif
  build-depends:       base >= 4.7 && < 5
                     , cryptohash-sha1
                     , text
                     , bytestring
                     , directory
                     , hashtables
                     , postgresql-simple
                     , containers
                     , aeson
                     , aeson-pretty 
                     , inline-c
                     , process
                     , random
                     , time
                     , fn
                     , logging
                     , conduit-extra
                     , zip-conduit
                     , temporary
                     , mtl
                     , magic
                     , JuicyPixels
                     , JuicyPixels-extra
                     , binary
                     , mbox
                     , filepath
                     , sqlite-simple
  default-language:    Haskell2010

executable shed-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shed
                     , warp
                     , wai
                     , http-types
                     , fn
                     , text
                     , logging
                     , aeson
                     , postgresql-simple
                     , binary
                     , filepath
                     , bytestring
                     , containers
                     , larceny 
                     , html-entities
                     , regex
                     , aeson-pretty
                     , magic
                     , sqlite-simple
                     , hashtables
  default-language:    Haskell2010

test-suite shed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbp/shed
