name:                shoebox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dbp/shoebox#readme
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Shoebox.Types
                     , Shoebox.BlobServer
                     , Shoebox.BlobServer.Directory
                     , Shoebox.BlobServer.Memory
                     , Shoebox.Indexer
                     , Shoebox.Images
                     , Shoebox.Importer
                     , Shoebox.IndexServer
                     , Shoebox.IndexServer.Postgresql
                     , Shoebox.IndexServer.Sqlite
                     , Shoebox.Blob.Email
                     , Shoebox.Blob.File
                     , Shoebox.Blob.Delete
                     , Shoebox.Blob.Replace
                     , Shoebox.Blob.Box
                     , Shoebox.Items
                     , Shoebox.Util
                     , Shoebox.Deletion
  c-sources:           src/Shoebox/Images.c

  cc-options:          -Wall -O2
  extra-libraries:     exif
  build-depends:       base >= 4.7 && < 5
                     , cryptonite
                     , memory
                     , text
                     , bytestring
                     , directory
                     , hashtables
                     , postgresql-simple
                     , containers
                     , aeson
                     , aeson-pretty 
                     , inline-c
                     , process
                     , random
                     , time
                     , fn
                     , larceny
                     , logging
                     , conduit-extra
                     , zip-conduit
                     , temporary
                     , mtl
                     , magic
                     , JuicyPixels
                     , JuicyPixels-extra
                     , binary
                     , mbox
                     , filepath
                     , sqlite-simple
                     , html-entities
                     , http-types
                     , wai
                     , regex 
  default-language:    Haskell2010

executable shoebox
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shoebox
                     , warp
                     , wai
                     , http-types
                     , fn
                     , text
                     , logging
                     , aeson
                     , postgresql-simple
                     , binary
                     , filepath
                     , bytestring
                     , containers
                     , larceny 
                     , html-entities
                     , regex
                     , aeson-pretty
                     , magic
                     , sqlite-simple
                     , hashtables
                     , time
  default-language:    Haskell2010

test-suite shoebox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shoebox
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbp/shoebox
